tests/baselines/reference/constructorWithExpressionLessReturn.errors.txt
constructorWithExpressionLessReturn.ts(8,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== constructorWithExpressionLessReturn.ts (1 errors) ====
    class C {
        constructor() {
            return;
        }
    }
    
    class D {
        x: number;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        constructor() {
            return;
        }
    }
    
    class E {
        constructor(public x: number) {
            return;
        }
    }
    
    class F<T> {
        constructor(public x: T) {
            return;
        }
    }